# MAUL

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  setup.py  setup_old.py
bnn_library/: network_main.py
bnn_library/bnnani/: network_classes.py  network_data_loader.py  network_test.py  network_train.py  network_utilities.py
bnn_library/maul1_weights/: maul1_weights.pt
complete_models/: all_compounds_data.json
notebooks/: best_ani_model_checkpoint.pt  complete_ani_model.pt  maul_potentials.ipynb
scripts/: network_main_train.py
src/: modified_ase.py
src/maul/: __init__.py
src/maul/interface/: modified_ase.py
src/maul/neural_pot/: train_np.py
src/maul/neural_pot/maul_library/: network_classes.py  network_data_loader.py  network_test.py  network_train.py  network_utilities.py
